fix spacing

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -396,9 +396,13 @@ input:valid {
         padding-right: 2rem;
     }
     #weather-info h3{
-    padding-left: 10rem;
+    padding-left: 5rem;
     padding-top: 2rem;
     font-size: xx-large;
+    }
+
+    #description h3{
+        padding-left: 1rem; ;
     }
 
     #weather h2{
